# agni

./: BENCHMARK.md  Cargo.toml  Dockerfile  README.md  config.docker.yml  config.example.yml
agni/: Cargo.toml
agni-bench/: Cargo.toml
agni-bench/src/: main.rs
agni-client/: Cargo.toml
agni-client/src/: main.rs
agni-server/: Cargo.toml
agni-server/src/: main.rs
agni-server/src/server/: connection.rs  mod.rs
agni/src/: config.rs  lib.rs
agni/src/protocol/: mod.rs
agni/src/store/: mod.rs
src/: lib.rs  main.rs
src/store/: entry.rs  mod.rs
