[package]
name = "agni-client"
version = "0.1.0"
edition = "2021"

[dependencies]
agni = { path = "../agni" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
